# faultyCodeSamples

./: .gitignore  .project  Jenkinsfile  README.md
C++/: .gitignore
C++/EmptyVectorAccess/: CMakeLists.txt
C++/EmptyVectorAccess/src/: CMakeLists.txt  makefile
C++/NegativeOutOfBoundsBug/: build.sh
C++/SampleProject2SonarCxxPlugin/: .gitignore  analyze.sh  build.sh  makefile  sonar-project.properties
C++/SimpleNullPointerBug/: analyze.sh  makefile
C++/UseUninitializedValue/src/: UseUninitializedValue.cpp
C++/emptyVectorAccess/: CMakeLists.txt  main.cpp
C++/simple/DoWhileNullPointerBug/: analyze.sh
C++/simple/IfNullPointerBug/: CMakeLists.txt  analyze.sh  makefile
C++/simple/ResourceLeakPartialClose/: sonar-project.properties
C++/simple/SimpleNullPointerBug/: Jenkinsfile  analyze.sh  sonar-project.properties
C++/simple/WhileNullPointerBug/: CMakeLists.txt  analyze.sh
C++/simpleNullPointer/: CMakeLists.txt  analyze.sh  build.sh  main.cpp  makefile  sonar-project.properties
C++/simpleNullPointer/include/: simple_null_pointer.h
C++/simpleNullPointer/src/: main.cpp  makefile  simple_null_pointer.cpp
C++/simpleNullPointer/test/: basic_qttest.cpp
Java/: .gitignore
Java/HelloEclipsePlugin/: .project  pom.xml
Java/HelloEclipsePlugin/HelloNullPointer/: .project
Java/HelloEclipsePlugin/HelloNullPointer.test/: pom.xml
Java/HelloNullPointerBug/: .project  pom.xml
Java/HelloNullPointerBugs/: .project
Java/HelloOfByOneBug/: .project  pom.xml
Java/HelloOutOfBoundsBug/: .project  pom.xml
Java/HelloResourceLeak/: .project
(+123 files in other folders)
